# codex

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  buf.yaml  build-image  build.rs  justfile  setup.sh
.github/workflows/: ci.yml
charts/taskd/: Chart.yaml  values.yaml
charts/taskd/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
monitoring/: dashboard.json  servicemonitor.yaml
proto/: task.proto
proto/task/v1/: task.proto
src/: grpc.rs  http.rs  lib.rs  main.rs  task_manager.rs
taskd/: Cargo.toml
taskd/taskd-api/: Cargo.toml  build.rs
taskd/taskd-api/src/: lib.rs
taskd/taskd-core/: Cargo.toml
taskd/taskd-core/src/: lib.rs
taskd_api/: __init__.py  service.py  store.py
taskd_api/protos/: task.proto  task_pb2.py  task_pb2_grpc.py
taskd_core/: Cargo.toml
taskd_core/migrations/: 0001_create_tasks.sql
taskd_core/src/: lib.rs  store.rs
