[package]
name = "codex"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
thiserror = "1"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
