[package]
name    = "codex"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
axum  = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# gRPC / Protobuf stack
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"

# error handling
thiserror = "1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.23"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "tls"] }

[build-dependencies]
# generates Rust types from .proto files
prost-build = "0.12"
tonic-build = "0.11"
