[package]
name = "taskd-api"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport"] }
tracing = "0.1"
taskd-core = { path = "../taskd-core" }

[build-dependencies]
prost-build = "0.12"
